@@ -1,3 +1,10 @@
+[b][color=orange]v3.08[/color], 06.08.2017[/b][list]
+[*]Add new filterPriority to install.
+[*]Add a new texture.
+[*]Add some spell to OzCooldowns.
+[*]Fix spellRewards frame in Quest skin.
+[*]Update SplashScreen Logo.[/list]
+
 [b][color=orange]v3.07[/color], 31.08.2017[/b][list]
 [*]Update install with new filterPriority.
 [*]Add the possibility to change the duration text on the Nameplate auras.
